# myground

./: .gitignore  Cargo.toml  Makefile  README.md  dev-nuke.sh  dev-reload.sh  dev-restart.sh  dev-start.sh  dev-stop.sh  myground.install  myground@.service  package.json
.github/workflows/: aur.yml  homebrew.yml  pages.yml  release.yml
.superharness/: events.json  heartbeat_state.json  state.json  tasks.json
apps/: audiobookshelf.toml  audiobookshelf.yml  beszel.toml  beszel.yml  filebrowser.toml  filebrowser.yml  firefly-iii.toml  firefly-iii.yml  flaresolverr.toml  flaresolverr.yml  gitea.toml  gitea.yml  home-assistant.toml  home-assistant.yml  immich.toml  immich.yml  jellyfin.toml  jellyfin.yml  kavita.toml  kavita.yml  lidarr.toml  lidarr.yml  mealie.toml  mealie.yml  memos.toml  memos.yml  metube.toml  metube.yml  navidrome.toml  navidrome.yml  nextcloud.toml  nextcloud.yml  nomad.toml  nomad.yml  ollama.toml  ollama.yml  open-webui.toml  open-webui.yml  perplexica.toml  perplexica.yml  (+16 more)
docs/: troubleshooting.md
services/: beszel.toml  filebrowser.toml  filebrowser.yml  immich.toml  immich.yml  jellyfin.toml  jellyfin.yml  navidrome.toml  navidrome.yml  nextcloud.toml  nextcloud.yml  pihole.toml  pihole.yml  qbittorrent.toml  qbittorrent.yml  vaultwarden.toml  vaultwarden.yml  whoami.toml  whoami.yml
src/: apps.rs  auth.rs  autoconfigure.rs  aws.rs  backup.rs  cloudflare.rs  compose.rs  config.rs  disk.rs  docker.rs  error.rs  gpu.rs  lib.rs  linking.rs  main.rs  registry.rs  scheduler.rs  services.rs  state.rs  stats.rs  tailscale.rs  testutil.rs  updates.rs  vpn.rs  web.rs
src/api/: apps.rs  auth.rs  backup.rs  browse.rs  cloudflare.rs  config.rs  deploy.rs  disks.rs  docker.rs  health.rs  logs.rs  mod.rs  response.rs  services.rs  stats.rs  swagger_ui.html  tailscale.rs  updates.rs
src/registry/: filebrowser.toml  immich.toml  whoami.toml
tests/: api_tests.rs  backup_e2e.rs
web/: index.html  package.json  vite.config.ts
web/src/: api.test.ts  api.ts  app.css  app.test.tsx  app.tsx  disks.test.tsx  disks.tsx  main.tsx  services.test.tsx  services.tsx  test-utils.ts
web/src/components/: app-backup-actions.tsx  app-backup-jobs.tsx  app-card.test.tsx  app-card.tsx  app-icon.tsx  app-links.tsx  app-picker.tsx  aws-setup-form.tsx  backup-config-fields.tsx  backup-form.tsx  config-row.test.tsx  config-row.tsx  container-status-card.test.tsx  container-status-card.tsx  field.test.tsx  field.tsx  hostname-editor.tsx  install-modal.tsx  job-dialog.tsx  log-viewer.tsx  path-picker.tsx  service-backup-actions.tsx  service-card.test.tsx  service-card.tsx  (+9 more)
website/: CNAME  docs.html  index.html  install.sh
(+26 files in other folders)
