[package]
name = "myground"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "Self-hosting platform — hold your ground"
repository = "https://github.com/backmeupplz/myground"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bollard = "0.19"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
mime_guess = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rand = "0.9"
sysinfo = "0.34"
bcrypt = "0.17"
serde_yaml = "0.9"
sha2 = "0.10"
openssl = { version = "0.10", features = ["vendored"], optional = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "rustls", "rt-tokio"] }
aws-sdk-iam = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
